src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Card_Number__c</fullName>
        <label>Pan Card Number</label>
        <type>TextArea</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>id-{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pan  Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>